Se crea la funcion para mostrar las lista de canciones de forma ordenada alfabeticamente

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <ul id="playlist-songs"></ul>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
